[gd_scene load_steps=3 format=3 uid="uid://bxqvn8yxqkqxr"]

[ext_resource type="Script" uid="uid://bq0r0rj7epgj6" path="res://scripts/WelcomeScreen.gd" id="1_0k8vr"]
[ext_resource type="Texture2D" uid="uid://dtgr22aa0dar2" path="res://assets/backgrounds/AZAMANE.png" id="2_azamane"]

[node name="WelcomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k8vr")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_azamane")
expand_mode = 1
stretch_mode = 5

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 269.0
offset_right = 2.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="UI/TitleContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="StartButton" type="Button" parent="UI/TitleContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.172633, 0.183092, 0.133669, 1)
theme_override_colors/font_color = Color(0.208438, 0.147954, 0.0066312, 1)
theme_override_font_sizes/font_size = 28
text = "Start Adventure"
flat = true

[node name="ParticleEffects" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -266.0
offset_bottom = -266.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DesertParticles" type="CPUParticles2D" parent="UI/ParticleEffects"]
position = Vector2(640, 100)
amount = 50
lifetime = 8.0
direction = Vector2(1, 1)
spread = 30.0
gravity = Vector2(0, 10)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
scale_amount_min = 0.5
scale_amount_max = 1.5
color = Color(0.831, 0.627, 0.09, 0.3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="UI/TitleContainer/StartButton" to="." method="_on_start_button_pressed"]
